--- a/package.json
+++ b/package.json
@@ -20,28 +20,31 @@
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
     "@windmill/react-ui": "0.3.1",
+    "axios": "^0.21.1",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
     "faker": "4.1.0",
+    "formik": "^2.2.6",
     "react": "^16.13.1",
     "react-chartjs-2": "2.9.0",
     "react-dom": "^16.13.1",
     "react-focus-lock": "2.4.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
-    "react-transition-group": "4.4.1"
+    "react-scripts": "^3.4.4",
+    "react-transition-group": "4.4.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "1.1.4",
     "@svgr/webpack": "5.4.0",
     "autoprefixer": "9.8.0",
-    "commitizen": "4.1.2",
+    "commitizen": "^4.2.3",
     "cross-env": "7.0.2",
     "cssnano": "4.1.10",
     "cz-conventional-changelog": "3.2.0",
     "postcss-cli": "7.1.1",
     "react-axe": "3.5.2",
-    "release-it": "13.6.4",
+    "release-it": "^13.7.1",
     "tailwindcss": "1.4.6"
   },
   "keywords": [
